jasper/force-app/main/default/objects/WA_Template__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Body</label>
    <type>LongTextArea</type>
    <length>2048</length>
    <description>Template body text. Use {{1}} for the variable.</description>
</CustomField>