jasper/force-app/main/default/objects/WA_Template__c/fields/Buttons_JSON__c.field-meta.xml
<CustomField>
    <fullName>Buttons_JSON__c</fullName>
    <label>Buttons JSON</label>
    <type>LongTextArea</type>
    <length>2048</length>
    <description>JSON array of buttons, e.g. [{"type":"QUICK_REPLY","text":"Know More"}].</description>
</CustomField>