jasper/force-app/main/default/objects/WA_Template__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <type>LongTextArea</type>
    <length>4096</length>
    <description>Error message from Meta if submission failed.</description>
</CustomField>